--- a/modelo-pagina-login/projeto-modelo-login/remember.html
+++ b/modelo-pagina-login/projeto-modelo-login/remember.html
@@ -12,17 +12,19 @@
 
 </head>
 <body>
-<main>  
+ <main>  
     <section>
             <form>
-                <div class="seta"><a href="Index.html"><i class="fa-regular fa-circle-left"></i></a></div>
+                <div class="seta">
+                    <a href="Index.html"><i class="fa-regular fa-circle-left"></i></a>
+                </div>
                 <h1>Vamos recuperar sua senha!</h1>
                 <div class="inputbox">
-                    <label for="">Por favor, digite seu melhor email, abaixo:</label>
+                    <label for="">Por favor, digite seu melhor email, abaixo: </label>
                     <input type="email" required>
+                    <button class="b1">Enviar email</button>
                 </div>
-                <button class="b1">Enviar email</button>
-        
+                
                 <p>Não recebeu o email?</p>
                 <button class="b2">Reenviar email</button>
             </form>
