--- a/modelo-pagina-login/projeto-modelo-login/register.html
+++ b/modelo-pagina-login/projeto-modelo-login/register.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/register.css">
     
-    <title>Recuperação de senha</title>
+    <title>Novo Login</title>
 </head>
 <body>
     <main>
