commit de melhoria
quase finalizado o css

--- a/modelo-pagina-login/projeto-modelo-login/remember.html
+++ b/modelo-pagina-login/projeto-modelo-login/remember.html
@@ -24,9 +24,10 @@
                     <input type="email" required>
                     <button class="b1">Enviar email</button>
                 </div>
-                
-                <p>Não recebeu o email?</p>
-                <button class="b2">Reenviar email</button>
+                <div class="button">
+                    <p>Não recebeu o email?</p>
+                    <button class="b2">Reenviar email</button>
+                </div>
             </form>
     </section>
 </main>
