Commit - arquivos-JS-para-outras-Páginas

--- a/modelo-pagina-login/projeto-modelo-login/remember.html
+++ b/modelo-pagina-login/projeto-modelo-login/remember.html
@@ -31,8 +31,8 @@
             </form>
     </section>
 </main>
+<script src="src/js/remember.js"></script>
     <!--  fazer um alerta dizendo que um email foi eviado para a recuperação de senha assim que for apertado o botão(JS)
-        
         fazer pergunta se receber não receeu o email e reenviar -->
 </body>
 </html>
