Commit - Inicio-JavaScript-register
Inicio do código JavaScript na pagina de registro

--- a/modelo-pagina-login/projeto-modelo-login/register.html
+++ b/modelo-pagina-login/projeto-modelo-login/register.html
@@ -45,7 +45,7 @@
                             required
                             style="width:180px">
                         </div>
-                        <button>Registrar</button>
+                        <button class="register">Registrar</button>
                     </div><!--box-->
                     <div class="box">
                         <div class="inputbox">
